fix: Fixed components of Chamado Entity. Now align with expected Business Logic and I/O of future API Requests